# Memoire

./: Cargo.toml  README.md
src/: arg_parser.rs  bookmark.rs  jq.rs  main.rs  tldr_parser.rs
src/collection/: bookmark.rs  jq.rs  mod.rs  util.rs
src/memoire/: bookmark.rs  mod.rs
src/memoire/collection/: mod.rs
src/term/: event.rs  mod.rs
src/term/widget/: action_list.rs  display_panel.rs  input_dialog.rs  mod.rs  result_table.rs  widget_trait.rs
src/tui/: buffer.rs  terminal.rs  text.rs
src/tui/backend/: mod.rs  termion.rs  test.rs
src/tui/widgets/: barchart.rs  block.rs  chart.rs  clear.rs  gauge.rs  list.rs  mod.rs  paragraph.rs  reflow.rs  sparkline.rs  table.rs  tabs.rs
src/tui/widgets/canvas/: line.rs  map.rs  mod.rs  points.rs  rectangle.rs
src/util/: mod.rs
