[package]
name = "memoire"
version = "0.1.1"
authors = ["Phoenix Chen"]
edition = "2018"
license = "Apache-2.0"
description = "A tool to archive commands"
readme = "README.md"
homepage = "https://github.com/Phoenix-Chen/Memoire"
repository = "https://github.com/Phoenix-Chen/Memoire"
keywords = ["cli", "search", "tui", "shell"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termion = "1.5.5"
tui = "0.12.0"
clap = "2.33.0"
dirs = "2.0.2"
clipboard = "0.5.0"
openssl = { version = "0.10.30", features = ["vendored"] }
tokio = { version = "0.2", features = ["full"] }
reqwest = "0.10.8"
futures = "0.3"

[[bin]]
name = "memoire"
path = "src/main.rs"
bench = false
