[package]
name = "memoire"
version = "0.1.2"
authors = ["Phoenix Chen"]
edition = "2018"
license = "Apache-2.0"
description = "A tool to archive commands"
readme = "README.md"
homepage = "https://github.com/Phoenix-Chen/Memoire"
repository = "https://github.com/Phoenix-Chen/Memoire"
keywords = ["cli", "search", "tui", "shell"]
categories = ["command-line-utilities"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termion = "1.5.6"
tui = { git = "https://github.com/Phoenix-Chen/tui-rs.git", branch = "optional_trim_end", version = "0.17", default-features = false, features = ["termion"] }
clap = "2.34.0"
dirs = "2.0.2"
arboard = "2.0.1"

[[bin]]
name = "memoire"
path = "src/main.rs"
bench = false
